fix(ui): Eliminate gap between top bar on mobile

--- a/components/css/buckyless/frame.less
+++ b/components/css/buckyless/frame.less
@@ -39,6 +39,10 @@
       padding-left: 0;
       padding-right: 0;
     }
+
+    @media (max-width: @xs) {
+      padding-top: 56px;
+    }
   }
 }
 
